# meshTools

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES.md  build_meshTalk.bat  build_tune_exe.bat  build_tune_exe.py  graphGen.py  graphGen.txt  meshLogger.py  meshLogger.txt  meshLogger_tune_entry.py  meshTalk.py  meshTalk.spec  meshTalk.txt  meshtalk_utils.py  meshtalk_utils.txt  meshtastic_listen_helper.py  message_text_compression.py  message_text_compression.txt  nodeDbUpdater.py  nodeDbUpdater.txt  pyproject.toml  requirements-ml.txt  requirements.txt  run_meshTalk.bat  sqlite_utils.py
9e760148/: config.json
documentation/: algorithms_and_technologies_index.txt  compression_documentation.txt  control_plane_documentation.txt  protocol_documentation.txt  retry_and_delivery_documentation.txt  security_documentation.txt  user_manual.txt  user_manual_en.txt  user_manual_ru.txt
meshTalk/: .codexignore  .gitignore  NOTICE  README.md  meshTalk.txt
meshtalk/: envelope_v3.py  handshake.py  pacing.py  protocol.py  protocol.txt  relay_protocol.py  routing_sim.py  sp_vocab.txt  storage.py  storage.txt  ui_chat_history.py  ui_events.py  ui_receive.py  ui_security.py  ui_state.py  utils.py  v3_dispatch.py  v3_radio.py  v3_receive_effects.py  v3_receiver.py  v3_receiver_service.py  v3_runtime.py  v3_send_record.py  v3_send_worker.py  v3_sender_service.py
meshtools/: graphGen.txt  meshLogger.txt  nodeDbUpdater.py
tests/: test_graphgen_html.py  test_graphgen_time.py  test_handshake.py  test_meshlogger_cli.py  test_meshlogger_graphgen.py  (+26 more)
(+55 files in other folders)
